# ChangeLog for app-editors/gedit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gedit/ChangeLog,v 1.203 2007/09/22 14:56:37 dertobi123 Exp $

  22 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gedit-2.18.2-r1.ebuild:
  ppc stable, bug #193339

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  gedit-2.18.2-r1.ebuild:
  Stable on amd64 wrt bug #193339.

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  gedit-2.18.2-r1.ebuild:
  Stable on x86 wrt bug #193339.

  15 Sep 2007; Roy Marples <uberlord@gentoo.org>
  files/gedit-2.18.1-fbsd.patch:
  Fix the fbsd patch for Makefile.am as well as we now autoreconf

*gedit-2.18.2-r1 (13 Sep 2007)

  13 Sep 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/gedit-2.18.2-libattr.patch, gedit-2.18.1-r1.ebuild,
  +gedit-2.18.2-r1.ebuild:
  Make libattr optional; bug #191989

  12 Sep 2007; Gilles Dartiguelongue <eva@gentoo.org>
  gedit-2.16.2-r1.ebuild, gedit-2.18.1-r1.ebuild, gedit-2.18.2.ebuild:
  fixing automagic attr dependency, fix bug #191989

*gedit-2.18.2 (29 Aug 2007)

  29 Aug 2007; Gilles Dartiguelongue <eva@gentoo.org> +gedit-2.18.2.ebuild:
  bump to 2.18.2

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> gedit-2.18.1-r1.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Mart Raudsepp <leio@gentoo.org> -gedit-2.14.3.ebuild,
  -gedit-2.14.4.ebuild, -gedit-2.18.0-r1.ebuild, -gedit-2.18.1.ebuild:
  Removing Gnome 2.14

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> gedit-2.18.1-r1.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org> gedit-2.18.1-r1.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> gedit-2.18.1-r1.ebuild:
  alpha/ia64 stable wrt #185823

  07 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gedit-2.18.1-r1.ebuild:
  Stable on ppc wrt bug #185823.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gedit-2.18.1-r1.ebuild: