@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gedit/Attic/gedit-2.18.2-r1.ebuild,v 1.4 2007/09/22 14:56:37 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gedit/Attic/gedit-2.18.2-r1.ebuild,v 1.5 2007/09/23 13:36:46 tgall Exp $
 
 inherit gnome2 eutils autotools
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ppc ~ppc64 ~sh ~sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ppc ppc64 ~sh ~sparc x86 ~x86-fbsd"
 IUSE="acl doc python spell"
 
 RDEPEND=">=gnome-base/gconf-2
