@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/Attic/deskbar-applet-2.18.1.ebuild,v 1.10 2007/08/28 19:52:14 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/Attic/deskbar-applet-2.18.1.ebuild,v 1.11 2007/09/23 13:41:19 tgall Exp $
 
 inherit gnome2 eutils autotools python
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://raphael.slinckx.net/deskbar/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ~ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd"
 IUSE="eds spell"
 
 RDEPEND=">=dev-lang/python-2.4
