@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/deskbar-applet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.63 2007/08/28 19:52:14 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.64 2007/09/23 13:41:20 tgall Exp $
+
+  23 Sep 2007; Tom Gall <tgall@gentoo.org> deskbar-applet-2.18.1.ebuild:
+  stable on ppc64
 
   28 Aug 2007; Jeroen Roovers <jer@gentoo.org> deskbar-applet-2.18.1.ebuild:
   Stable for HPPA (bug #185823).
