@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-games-extra-data
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games-extra-data/ChangeLog,v 1.41 2007/09/18 04:00:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games-extra-data/ChangeLog,v 1.42 2007/09/23 13:33:41 tgall Exp $
+
+  23 Sep 2007; Tom Gall <tgall@gentoo.org>
+  gnome-games-extra-data-2.14.0.ebuild:
+  stable on ppc64
 
   18 Sep 2007; Jeroen Roovers <jer@gentoo.org>
   gnome-games-extra-data-2.14.0.ebuild:
