@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gedit
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gedit/ChangeLog,v 1.203 2007/09/22 14:56:37 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gedit/ChangeLog,v 1.204 2007/09/23 13:36:46 tgall Exp $
+
+  23 Sep 2007; Tom Gall <tgall@gentoo.org> gedit-2.18.2-r1.ebuild:
+  stable on ppc64
 
   22 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   gedit-2.18.2-r1.ebuild:
